# PilowX

./: CMakeLists.txt  README.md
src/: main.cpp
src/hacks/: AutoClicker.cpp  AutoClicker.h
src/ui/: slider.cpp  slider.h  ui.cpp  ui.h
src/utils/: utils.cpp  utils.h
src/utils/keyboard/: KeyboardManager.cpp  KeyboardManager.h
